[package]
name = "belp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
uuid = "1.1.2"
bytes = "1.1.0"
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.35"
hyper = "0.14.19"
once_cell = "1.12.0"
pin-project-lite = "0.2.9"
want = "0.3.0"
ring = "0.16.20"
md-5 = "0.10.1"
crc32fast = "1.3.2"
aes = "0.8.1"

[dev-dependencies]
hyper = { version = "*", features = ["full"] }
tracing-subscriber = { version = "*", features = ["env-filter"] }
console-subscriber = "0.1.6"


[[example]]
name = "conn"

[[example]]
name = "conn2"

[[example]]
name = "coon3"
