[package]
name = "belp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["proto", "config"]


[dependencies]
proto = { path = "./proto" }
config = { path = "./config" }
http = "*"
toml = "*"
serde = "*"
tokio = "*"
hyper = "0.14"
