[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
hyper = "0.14"
uuid = "1.1.0"
http = "0.2.0"
bytes = "1.1.0"
ring = "0.16"
once_cell = "1.13.0"
md-5 = "0.10.1"
crc32fast = "1.3.2"
aes = "0.8.1"
